--- a/Deepanshu.html
+++ b/Deepanshu.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="deepanshu.css">
 </head>
 <body>
-    <header id="main">
+    <header id="main" style="color: brown">
         <div id="extra">
             <!-- <h2 >Shaheed Bhagat Singh University Of Technology</h2> -->
              <img src="Screenshot (4).png" >
             
-        </div>
+        </div> 
         <nav id="first">
             <ul id="second">
                 <li><a href="#Home">Home</a></li>
@@ -23,5 +23,19 @@
             </ul>
         </nav>
     </header>
+
+    <div id="content1">
+        <ul  >
+            <li>NIRF ranking 1 (2024)</li>
+            <li>Highly Qualified Faculty</li>
+            <li>Learn effective academics</li>
+            <li>200% Placements in 2023</li>
+        </ul> 
+        <a href="#Learn more"> Learn more ....</a>
+
+
+          
+    </div>
+  
 </body>
 </html>
